...
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/button"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:paddingRight="30dp"
                android:paddingLeft="30dp"
                android:layout_width="wrap_content"
                android:gravity="center_vertical"
...
